--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 	},
 	"dependencies": {
 		"prototypes": "^2.3.3",
-		"testing": "^1.1.1",
-		"log": "~1.4.0"
+		"testing": "^1.1.1"
 	},
 	"keywords": [
 		"profiler",
